Hopefully fixed IE content wrapping

--- a/sass/parts/_secondary_nav.scss
+++ b/sass/parts/_secondary_nav.scss
@@ -71,6 +71,7 @@
 					font-size: 15px;
 				}
 
+				white-space: no-wrap;
 				padding-top: 16px;
 				padding-bottom: 17px;
 				font-weight: lighter;
