--- a/sass/parts/_tertiary_nav.scss
+++ b/sass/parts/_tertiary_nav.scss
@@ -141,6 +141,7 @@
 				> a {
 					font-size: 18px;
 					font-weight: lighter;
+					white-space: no-wrap;
 				}
 
 				> label[for]
